# tarraz

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: draft-releaser.yaml  python-publish.yml
tarraz/: constants.py  logger.py  main.py  models.py  processor.py  utils.py
tarraz/assets/: dmc.json
tarraz/colors/: __init__.py  dmc.py
tarraz/providers/: __init__.py  dmc.py  provider.py
tarraz/stitcher/: __init__.py  display.py  stitcher.py  svg.py
